--- a/css/characters.css
+++ b/css/characters.css
@@ -112,6 +112,14 @@ nav div > a {
 
 /* Loader de personajes */
 
+.loader-background {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #00000055;
+  display: none;
+}
+
 .loader {
   border: 6px solid #f3f3f3;
   border-top: 6px solid #4CAF50;
